reworkapp (#7)
rework the app
no more resume hosting
apps only
retooled to run on GCP app engine
