# portfolio/static/assets/json/swagger.json
@@ -35,24 +35,6 @@
         "deprecated": false
       }
     },
-    "/resume": {
-      "get": {
-        "tags": [
-          "System"
-        ],
-        "summary": "resume",
-        "description": "Return my resume in JSON format",
-        "operationId": "resume",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "",
-            "headers": {}
-          }
-        },
-        "deprecated": false
-      }
-    },
     "/mockme": {
       "post": {
         "tags": [
@@ -118,36 +100,6 @@
         },
         "deprecated": false
       }
-    },
-    "/emacs": {
-      "get": {
-        "tags": [
-          "Projects"
-        ],
-        "summary": "emacs",
-        "description": "Return a bash script to setup my emacs config",
-        "operationId": "emacs",
-        "parameters": [
-          {
-            "name": "private",
-            "in": "query",
-            "description": "If private is set to true return a config that requires SSH trust to Github",
-            "style": "form",
-            "explode": true,
-            "schema": {
-              "type": "boolean",
-              "example": true
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "",
-            "headers": {}
-          }
-        },
-        "deprecated": false
-      }
     }
   },
   "components": {
@@ -196,5 +148,5 @@
         }
       }
     }
-  },
+  }
 }
